--- a/BurningMan/css/main.css
+++ b/BurningMan/css/main.css
@@ -2,7 +2,7 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: 'Anton', sans-serif;
-	color: black;
+	color: black;  # вместо названия всегда используй код цвета, причем в полном его виде. Например: #000000
 	font-size: 16px;
 }
 
@@ -31,7 +31,7 @@ a {
 }
 
 section {
-	padding-top: 113px	
+	padding-top: 113px	// ";" ставь всегда. это не ошибка, скорее общий стиль. Что за section? Он один на весь сайт? Лучше именно к классу всегда привязывать стили, а не к тэгу
 }
 
 p {
